Fixing overflow on homepage on mobile

--- a/web/app/themes/girlsgarage/assets/styles/pages/_home.scss
+++ b/web/app/themes/girlsgarage/assets/styles/pages/_home.scss
@@ -160,7 +160,6 @@
     ul {
       margin: 0;
       padding: 0;
-      width: calc(100% + 55px);
       margin-left: -$padding-sm;
       li {
         list-style: none;
